--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
 
     <dimen name="app_bar_height">156dp</dimen>
     <dimen name="toolbar_height">48dp</dimen>
+    <dimen name="update_padding_bottom">64dp</dimen>
     <dimen name="status_bar_height">24dp</dimen>
     <dimen name="search_item_size">48dp</dimen>
     <dimen name="search_list_item_height">72dp</dimen>
