--- a/app/src/main/res/layouts/shared/layout/footer_buttons.xml
+++ b/app/src/main/res/layouts/shared/layout/footer_buttons.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -13,9 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
         android:orientation="vertical"
-        android:animateFirstView="false"
-        android:inAnimation="@anim/slide_in_bottom"
-        android:outAnimation="@anim/slide_out_bottom">
+        app:slideVisibility="@{buttonsViewModel.footerVisibility}">
 
         <View
             android:layout_width="match_parent"
