--- a/app/src/main/res/layouts/shared/layout/item_stat_update.xml
+++ b/app/src/main/res/layouts/shared/layout/item_stat_update.xml
@@ -26,6 +26,7 @@
             android:paddingBottom="3dp"
             android:textAppearance="@style/text_bold_white_small"
             android:text="@{viewModel.statFor}"
+            android:alpha="@{viewModel.baseAlpha}"
             app:animatedAlpha="@{viewModel.alphaFor}"
             android:onClick="@{() -> viewModel.onStatForClicked()}"/>
 
@@ -50,6 +51,7 @@
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:layout_toEndOf="@id/stat_for_textview"
             android:layout_alignBottom="@+id/stat_for_edittext"
+            android:gravity="start"
             android:paddingBottom="3dp"
             android:textAppearance="@style/text_bold_white_small"
             android:text="@{viewModel.updateFor}"
@@ -79,6 +81,7 @@
             android:paddingBottom="3dp"
             android:textAppearance="@style/text_bold_white_small"
             android:text="@{viewModel.statAgainst}"
+            android:alpha="@{viewModel.baseAlpha}"
             app:animatedAlpha="@{viewModel.alphaAgainst}"
             android:onClick="@{() -> viewModel.onStatAgainstClicked()}"/>
 
@@ -104,6 +107,7 @@
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:layout_toStartOf="@id/stat_against_textview"
             android:layout_alignBottom="@+id/stat_for_edittext"
+            android:gravity="end"
             android:paddingBottom="3dp"
             android:textAppearance="@style/text_bold_white_small"
             android:text="@{viewModel.updateAgainst}"
