--- a/app/src/main/res/layouts/shared/layout/item_stat_update.xml
+++ b/app/src/main/res/layouts/shared/layout/item_stat_update.xml
@@ -47,7 +47,7 @@
             android:id="@+id/update_for_textview"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:layout_toEndOf="@id/stat_for_textview"
             android:layout_alignBottom="@+id/stat_for_edittext"
