Pending updates card

--- a/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
@@ -10,36 +10,52 @@
             type="com.example.kevin.fifastatistics.viewmodels.RecordsCardViewModel" />
     </data>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/records_card_view"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        card_view:cardCornerRadius="@dimen/card_corner_radius"
-        app:cardBackgroundColor="@color/cardViewBackground">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/records_card_view_layout"
-            android:orientation="vertical"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:textAppearance="@style/text_bold_grey_small"
+            android:text="@string/records"/>
 
-            <include
-                layout="@layout/records_set_item"
-                android:id="@+id/match_records"
-                bind:viewModel="@{viewModel.matches}"
-                bind:headerLeft="@{@string/matches}">
-            </include>
+        <android.support.v7.widget.CardView
+            android:id="@+id/records_card_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            card_view:cardCornerRadius="@dimen/card_corner_radius"
+            app:cardBackgroundColor="@color/cardViewBackground">
 
-            <include
-                layout="@layout/records_set_item"
-                android:id="@+id/series_records"
-                bind:viewModel="@{viewModel.series}"
-                bind:headerLeft="@{@string/series}">
-            </include>
+            <LinearLayout
+                android:id="@+id/records_card_view_layout"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        </LinearLayout>
+                <include
+                    layout="@layout/records_set_item"
+                    android:id="@+id/match_records"
+                    bind:viewModel="@{viewModel.matches}"
+                    bind:headerLeft="@{@string/matches}">
+                </include>
 
-    </android.support.v7.widget.CardView>
+                <include
+                    layout="@layout/records_set_item"
+                    android:id="@+id/series_records"
+                    bind:viewModel="@{viewModel.series}"
+                    bind:headerLeft="@{@string/series}">
+                </include>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
 
 </layout>
