--- a/app/src/main/res/layouts/shared/layout/item_pending_update.xml
+++ b/app/src/main/res/layouts/shared/layout/item_pending_update.xml
@@ -17,13 +17,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:textAppearance="@style/text_grey_small"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:textAppearance="@style/text_small"
             android:text="@{viewModel.summary}"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:text="@string/review"
             android:onClick="@{() -> viewModel.onReviewButtonClick()}"
