some pending update polish

--- a/app/src/main/res/layouts/fragments/layout/fragment_user_overview.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_user_overview.xml
@@ -49,6 +49,7 @@
                 <include layout="@layout/divisor"/>
 
                 <include
+                    android:id="@+id/overview_layout"
                     layout="@layout/user_overview_data_layout"
                     bind:viewModel="@{viewModel}"/>
 
