--- a/app/src/main/res/layouts/fragments/layout/fragment_user_overview.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_user_overview.xml
@@ -24,7 +24,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:descendantFocusability="blocksDescendants">
+                android:descendantFocusability="blocksDescendants"
+                android:animateLayoutChanges="true">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     xmlns:app="http://schemas.android.com/apk/res-auto"
