--- a/app/src/main/res/layouts/shared/layout/item_pending_update.xml
+++ b/app/src/main/res/layouts/shared/layout/item_pending_update.xml
@@ -10,14 +10,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/summary_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:gravity="center_vertical"
