Current series card

--- a/app/src/main/res/layouts/fragments/layout/fragment_player_overview.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_player_overview.xml
@@ -8,7 +8,7 @@
             type="com.example.kevin.fifastatistics.viewmodels.UserOverviewViewModel"/>
         <variable
             name="progressViewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.ProgressFragmentViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.fragment.ProgressFragmentViewModel"/>
 
         <import type="android.view.View"/>
 
