--- a/app/src/main/res/layouts/shared/layout/fragment_match.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_match.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.MatchFragmentViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.fragment.MatchFragmentViewModel"/>
     </data>
 
     <FrameLayout
