--- a/app/src/main/res/layouts/shared/layout/item_current_series.xml
+++ b/app/src/main/res/layouts/shared/layout/item_current_series.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.item.PendingUpdateItemViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.item.CurrentSeriesItemViewModel"/>
     </data>
 
     <RelativeLayout
@@ -24,20 +24,20 @@
             android:text="@{viewModel.summary}"/>
 
         <Button
-            android:id="@+id/review_button"
+            android:id="@+id/continue_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="?attr/selectableItemBackground"
-            android:text="@string/review"
-            android:onClick="@{() -> viewModel.onReviewButtonClick()}"
+            android:text="@string/continue_series"
+            android:onClick="@{() -> viewModel.onContinueClick()}"
             android:textColor="@{viewModel.color}"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@id/review_button"
+            android:layout_below="@id/continue_button"
             android:paddingStart="@dimen/activity_horizontal_margin"
             android:paddingEnd="@dimen/activity_horizontal_margin"
             android:background="?android:attr/listDivider"
