--- a/app/src/main/res/layouts/shared/layout/item_match.xml
+++ b/app/src/main/res/layouts/shared/layout/item_match.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="matchItemViewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.MatchesItemViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.item.MatchesItemViewModel"/>
     </data>
 
     <LinearLayout
