--- a/app/src/main/res/layouts/useroverview/layout/user_overview_data_layout.xml
+++ b/app/src/main/res/layouts/useroverview/layout/user_overview_data_layout.xml
@@ -16,7 +16,13 @@
 
         <include
             layout="@layout/card_pending_updates"
-            bind:viewModel="@{viewModel.updates}"/>
+            bind:viewModel="@{viewModel.series}"
+            bind:title="@{@string/current_series}"/>
+
+        <include
+            layout="@layout/card_pending_updates"
+            bind:viewModel="@{viewModel.updates}"
+            bind:title="@{@string/pending_updates}"/>
 
         <include
             layout="@layout/records_card_view"
