--- a/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="matchViewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.AddMatchFragmentViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.fragment.AddMatchFragmentViewModel"/>
         <import type="com.example.kevin.fifastatistics.R.drawable"/>
     </data>
 
