--- a/app/src/main/res/layouts/fragments/layout/fragment_friends.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_friends.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="progressViewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.ProgressFragmentViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.fragment.ProgressFragmentViewModel"/>
     </data>
 
     <FrameLayout
