--- a/app/src/main/res/layouts/fragments/layout/fragment_friends_item.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_friends_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.FriendsItemViewModel" />
+            type="com.example.kevin.fifastatistics.viewmodels.item.FriendsItemViewModel" />
     </data>
 
     <LinearLayout
