--- a/app/src/main/res/layouts/shared/layout/card_pending_updates.xml
+++ b/app/src/main/res/layouts/shared/layout/card_pending_updates.xml
@@ -6,7 +6,10 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.UpdatesCardViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.card.RecyclerCardViewModel"/>
+        <variable
+            name="title"
+            type="String"/>
     </data>
 
     <LinearLayout
@@ -22,7 +25,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
             android:textAppearance="@style/text_bold_grey_small"
-            android:text="@string/pending_updates"/>
+            android:text="@{title}"/>
 
         <android.support.v7.widget.CardView
             android:id="@+id/update_stats_card_view"
