--- a/app/src/main/res/layouts/shared/layout/fragment_match_update.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_match_update.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.MatchUpdateFragmentViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.fragment.MatchUpdateFragmentViewModel"/>
     </data>
 
     <FrameLayout
