--- a/app/src/main/res/layouts/shared/layout/item_series.xml
+++ b/app/src/main/res/layouts/shared/layout/item_series.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="seriesItemViewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.SeriesItemViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.item.SeriesItemViewModel"/>
         <import type="android.view.View"/>
     </data>
 
