--- a/app/src/main/res/layouts/shared/layout/item_stat_update.xml
+++ b/app/src/main/res/layouts/shared/layout/item_stat_update.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.UpdateStatsItemViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.item.UpdateStatsItemViewModel"/>
     </data>
 
     <RelativeLayout
