--- a/app/src/main/res/layouts/shared/layout/item_team.xml
+++ b/app/src/main/res/layouts/shared/layout/item_team.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.TeamItemViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.item.TeamItemViewModel"/>
     </data>
 
     <LinearLayout
