--- a/app/src/main/res/layouts/shared/layout/progress.xml
+++ b/app/src/main/res/layouts/shared/layout/progress.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="progressViewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.ProgressFragmentViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.fragment.ProgressFragmentViewModel"/>
     </data>
 
     <FrameLayout
