--- a/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.RecordsCardViewModel" />
+            type="com.example.kevin.fifastatistics.viewmodels.card.RecordsCardViewModel" />
     </data>
 
     <LinearLayout
