--- a/app/src/main/res/layouts/useroverview/layout/records_set_item.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_set_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.RecordsItemViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.item.RecordsItemViewModel"/>
         <variable
             name="headerLeft"
             type="String"/>
