--- a/app/src/main/res/layouts/useroverview/layout/stats_list_item.xml
+++ b/app/src/main/res/layouts/useroverview/layout/stats_list_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.StatItemViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.item.StatItemViewModel"/>
     </data>
 
     <RelativeLayout
