--- a/app/src/main/res/layouts/useroverview/layout/stats_list_view_layout.xml
+++ b/app/src/main/res/layouts/useroverview/layout/stats_list_view_layout.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kevin.fifastatistics.viewmodels.StatsCardViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.card.StatsCardViewModel"/>
     </data>
 
     <LinearLayout
