--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,6 @@
     <color name="black_tint">#50000000</color>
 
     <color name="material_drawer_dark_selected_text">#4CAF50</color>
-
+    <color name="gold">#FFD700</color>
 
 </resources>
