--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="medium_margin">12dp</dimen>
+    <dimen name="tiny_margin">4dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="fab_button_margin">4dp</dimen>
     <dimen name="text_margin">16dp</dimen>
@@ -32,6 +34,9 @@
     <dimen name="team_item_logo_size">30dp</dimen>
     <dimen name="match_team_logo_size">20dp</dimen>
     <dimen name="match_team_logo_size_large">60dp</dimen>
+    <dimen name="match_event_item_player_image_size">52dp</dimen>
+    <dimen name="match_event_icon_size">18dp</dimen>
+    <dimen name="match_event_icon_margin_top">4dp</dimen>
     <dimen name="shutter_button_margin">12dp</dimen>
 
     <dimen name="friends_fragment_image_height">130dp</dimen>
