basic box score

--- a/app/src/main/res/layouts/shared/layout/fragment_match.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_match.xml
@@ -32,6 +32,10 @@
                     android:visibility="@{viewModel.headerVisibility}"/>
 
                 <include
+                    layout="@layout/card_boxscore"
+                    bind:viewModel="@{viewModel.boxScore}"/>
+
+                <include
                     layout="@layout/card_pending_updates"
                     bind:viewModel="@{viewModel.goals}"
                     bind:title="@{@string/goals}"/>
